# cpe_search

./: .gitignore  CHANGELOG.md  README.md  config.json  config_mariadb.json  cpe-search.py  cpe_search.py  create_sql_statements.json  database_wrapper_functions.py  pyproject.toml  requirements.txt  test.py  test_cpe_suggestions.py  test_cpes.py
.github/workflows/: publish_pypi_package_on_new_release.yml  tests.yml  update_release_assets.yml
src/cpe_search/: config_mariadb.json  cpe_search.py  create_sql_statements.json  database_wrapper_functions.py
tests/: test_cpe_suggestions.py  test_cpes.py
